--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1654,7 +1654,7 @@ a:hover {
 .bento-fab {
   position: fixed;
   bottom: 2rem;
-  left: 2rem;
+  right: 2rem;
   width: 60px;
   height: 60px;
   border-radius: 50%;
